# hits

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20250326104117_create_counters_table.down.sql  20250326104117_create_counters_table.up.sql
src/: badge.rs  error.rs  font_metrics.rs  main.rs
src/api/: handlers.rs  mod.rs  types.rs  ws.rs
