[package]
name = "hits"
version = "0.2.0"
edition = "2021"
authors = ["Jannchie <jannchie@gmail.com>"]
description = "A simple web server for counting hits."

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["ws"] }
chrono = "0.4.40"
dotenv = "0.15.0"
fontdue = "0.8.0"
futures-util = "0.3.31"
serde = "1.0.219"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "time",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
