[package]
name = "hits"
version = "0.4.0"
edition = "2021"
authors = ["Jannchie <jannchie@gmail.com>"]
description = "A simple web server for counting hits."

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
fontdue = "0.9.3"
futures-util = "0.3.31"
serde = "1.0.219"
shields = { version = "1.0.0" }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "time",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
